--- a/stocks/templates/stocks/stock.html
+++ b/stocks/templates/stocks/stock.html
@@ -2,6 +2,22 @@
 
 {% block content %}
 
+<section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="flex flex-wrap -m-4 text-center">
+      <div class="p-4 sm:w-1/2 w-1/2">
+        <h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">{{ last_closing_price }} {{ currency }}</h2>
+        <p class="leading-relaxed">Last Closing Price</p>
+      </div>
+      <div class="p-4 sm:w-1/2 w-1/2">
+        <h2 class="title-font font-medium sm:text-4xl text-3xl {{ change_color }}">{{ change_pct }} %</h2>
+        <p class="leading-relaxed">Change in %</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<br>
 
 <canvas id="myChart"></canvas>
 
