--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -18,18 +18,29 @@
 		</div>
 	  </div>
 
-	  {% for stock in stocks %}
-	  <div class="flex flex-wrap lg:w-4/5 sm:mx-auto sm:mb-2 -mx-2">
-		<div class="p-2 sm:w-1/2 w-full">
-		  <div class="bg-gray-100 rounded flex p-4 h-full items-center">
-			<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" class="text-yellow-500 w-6 h-6 flex-shrink-0 mr-4" viewBox="0 0 24 24">
-				<path strokeLinecap="round" strokeLinejoin="round" strokeWidth={1} d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" />
-			</svg>
-			<span class="title-font font-medium">{{ stock.symbol }}</span>
-		  </div>
-		</div>
-	  </div>
-	  {% endfor %}
+	  <div class="flex flex-wrap -m-4">
+		{% for stock in stocks %}
+		
+			<div class="p-4 lg:w-1/3 md:w-full">
+			<div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
+				<div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-yellow-100 text-yellow-500 flex-shrink-0">
+				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-8 h-8" viewBox="0 0 24 24">
+					<path d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path>
+				</svg>
+				</div>
+				<div class="flex-grow">
+				<h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{ stock.symbol }}</h2>
+				<a class="cursor-pointer mt-3 text-yellow-500 inline-flex items-center">Details
+					<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+					<path d="M5 12h14M12 5l7 7-7 7"></path>
+					</svg>
+				</a>
+				</div>
+			</div>
+			</div>
+
+		{% endfor %}
+	</div>
 	</div>
   </section>
 
