--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -29,10 +29,11 @@
 				</svg>
 				</div>
 				<div class="flex-grow">
-				<h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{ stock.symbol }}</h2>
-				<a class="cursor-pointer mt-3 text-yellow-500 inline-flex items-center">Details
+				<h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{ stock.amount }} shares of {{ stock.symbol }}</h2>
+				<a href="#" class="cursor-pointer mt-3 text-yellow-500 inline-flex items-center">
+					Details
 					<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-					<path d="M5 12h14M12 5l7 7-7 7"></path>
+						<path d="M5 12h14M12 5l7 7-7 7"></path>
 					</svg>
 				</a>
 				</div>
