--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -5,19 +5,21 @@
 
 <section class="text-gray-600 body-font">
 	<div class="container px-5 py-24 mx-auto">
-	  <div class="container px-5 py-24 mx-auto">
-		<div class="flex flex-wrap -m-4 text-center">
-		  <div class="p-4 sm:w-1/2 w-1/2">
-			<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
-			<p class="leading-relaxed">YTD performance</p>
-		  </div>
-		  <div class="p-4 sm:w-1/2 w-1/2">
-			<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
-			<p class="leading-relaxed">Overall performance</p>
-		  </div>
+		<div class="container px-5 py-24 mx-auto">
+			<div class="flex flex-wrap -m-4 text-center">
+			<div class="p-4 sm:w-1/2 w-1/2">
+				<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
+				<p class="leading-relaxed">YTD performance</p>
+			</div>
+			<div class="p-4 sm:w-1/2 w-1/2">
+				<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
+				<p class="leading-relaxed">Overall performance</p>
+			</div>
+			</div>
 		</div>
-	  </div>
-
+		<a class="text-gray-500 hover:text-yellow-400" href="#">
+			New position
+		</a>
 	  <div class="flex flex-wrap -m-4">
 		{% for stock in stocks %}
 		
