--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -7,45 +7,51 @@
 	<div class="container px-5 py-24 mx-auto">
 		<div class="container px-5 py-24 mx-auto">
 			<div class="flex flex-wrap -m-4 text-center">
-			<div class="p-4 sm:w-1/2 w-1/2">
-				<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
-				<p class="leading-relaxed">YTD performance</p>
-			</div>
-			<div class="p-4 sm:w-1/2 w-1/2">
-				<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
-				<p class="leading-relaxed">Overall performance</p>
-			</div>
+				<div class="p-4 sm:w-1/2 w-1/2">
+					<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
+					<p class="leading-relaxed">YTD performance</p>
+				</div>
+				<div class="p-4 sm:w-1/2 w-1/2">
+					<h2 class="title-font font-medium sm:text-4xl text-3xl text-gray-900">Coming soon...</h2>
+					<p class="leading-relaxed">Overall performance</p>
+				</div>
 			</div>
 		</div>
-		<a class="text-gray-500 hover:text-yellow-400" href="#">
-			New position
-		</a>
-	  <div class="flex flex-wrap -m-4">
-		{% for stock in stocks %}
-		
+
+		<div class="py-5">
+			<a href="{% url 'portfolio:new-position' %}" class="hover:text-yellow-500 text-lg">
+				New Positon
+			</a>
+		</div>
+		<div class="flex flex-wrap -m-4">
+			{% for stock in stocks %}
+
 			<div class="p-4 lg:w-1/3 md:w-full">
-			<div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
-				<div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-yellow-100 text-yellow-500 flex-shrink-0">
-				<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-8 h-8" viewBox="0 0 24 24">
-					<path d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path>
-				</svg>
+				<div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
+					<div
+						class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-yellow-100 text-yellow-500 flex-shrink-0">
+						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+							stroke-width="2" class="w-8 h-8" viewBox="0 0 24 24">
+							<path d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path>
+						</svg>
+					</div>
+					<div class="flex-grow">
+						<h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{ stock.amount }} shares of {{stock.symbol }}</h2>
+						<a href="#" class="cursor-pointer mt-3 text-yellow-500 inline-flex items-center">
+							Details
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+								stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+								<path d="M5 12h14M12 5l7 7-7 7"></path>
+							</svg>
+						</a>
+					</div>
 				</div>
-				<div class="flex-grow">
-				<h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{ stock.amount }} shares of {{ stock.symbol }}</h2>
-				<a href="#" class="cursor-pointer mt-3 text-yellow-500 inline-flex items-center">
-					Details
-					<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-						<path d="M5 12h14M12 5l7 7-7 7"></path>
-					</svg>
-				</a>
-				</div>
-			</div>
 			</div>
 
-		{% endfor %}
+			{% endfor %}
+		</div>
 	</div>
-	</div>
-  </section>
+</section>
 
 
 {% endblock content %}
