--- a/portfolio/templates/portfolio/portfolio_list.html
+++ b/portfolio/templates/portfolio/portfolio_list.html
@@ -19,26 +19,30 @@
 		</div>
 
 		<div class="py-5">
-			<a href="{% url 'portfolio:new-position' %}" class="hover:text-yellow-500 text-lg">
-				New Positon
+			<a href="{% url 'portfolio:new-position' %}" class="hover:text-yellow-500 text-lg inline-flex items-center">
+				<svg fill="none" stroke="currentColor"
+					stroke-width="2" class="w-8 h-8 ml-2" viewBox="0 0 24 24">
+					<path d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+				</svg>
+				New Position
 			</a>
 		</div>
 		<div class="flex flex-wrap -m-4">
 			{% for stock in stocks %}
 
-			<div class="p-4 lg:w-1/3 md:w-full">
+			<div class="p-4 lg:w-1/3 md:w-full">	
 				<div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
-					<div
-						class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-yellow-100 text-yellow-500 flex-shrink-0">
+					<div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-yellow-100 text-yellow-500 flex-shrink-0">
 						<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
 							stroke-width="2" class="w-8 h-8" viewBox="0 0 24 24">
 							<path d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path>
 						</svg>
-					</div>
+					</div>					
 					<div class="flex-grow">
-						<h2 class="text-gray-900 text-lg title-font font-medium mb-3">{{ stock.amount }} shares of {{stock.symbol }}</h2>
+						<a href="{% url 'portfolio:position-edit' stock.pk %}" class="cursor-pointer tracking-widest text-xs title-font font-medium text-yellow-500 mb-1">EDIT</a>
+						<h2 class="text-gray-900 text-lg title-font font-medium mt-1 mb-1">{{ stock.amount }} shares of {{stock.symbol }}</h2>
 						<a href="#" class="cursor-pointer mt-3 text-yellow-500 inline-flex items-center">
-							Details
+							Details	
 							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
 								stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
 								<path d="M5 12h14M12 5l7 7-7 7"></path>
