--- a/portfolio/templates/portfolio/edit_position.html
+++ b/portfolio/templates/portfolio/edit_position.html
@@ -2,18 +2,21 @@
 
 {% block content %}
 
-</div>
-	<form method="post">
+<div class="max-w-lg mx-auto">
+	<div class="py-10">
+		<h2 class="text-4xl text-gray-800">Edit Position</h2>
+	</div>
+	<form method="post" class="mt-5">
 		{% csrf_token %}
 		{{ form.as_p }}
-		<br>
-		<button type="submit" class="inline-flex ml-auto text-white bg-yellow-500 border-0 py-2 px-6 focus:outline-none hover:bg-yellow-600 rounded">
+		<button type='submit' class="w-full text-white bg-yellow-500 hover:bg-yellow-600 px-3 py-2 rounded-md mt-5">
 			Submit
 		</button>
 	</form>
-	<a href="{% url 'portfolio:position-delete' stock.pk %}" class="w-1/4 mt-3 inline-flex ml-auto text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded">
+	<a href="{% url 'portfolio:position-delete' stock.pk %}" class="text-red-500 hover:text-red-600">
 		Delete
 	</a>
 </div>
+
 
 {% endblock content %}
