--- a/portfolio/templates/portfolio/new_position.html
+++ b/portfolio/templates/portfolio/new_position.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<a href="{% url 'portfolio:portfolio-list' %}">back to portfolio</a>
-	<h1>New Position</h1>
-	<form method="post">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<button type="submit">Submit</button>
-	</form>
+
+	<div class="max-w-lg mx-auto">
+		<div class="py-10">
+			<h2 class="text-4xl text-gray-800">Create a new Position</h2>
+		</div>
+		<form method="post" class="mt-5">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<button type='submit' class="w-full text-white bg-yellow-500 hover:bg-yellow-600 px-3 py-2 rounded-md mt-5">
+				Submit
+			</button>
+		</form>
+	</div>
 {% endblock content %}
